# R-Type

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  config.cfg  level1.txt  levelConfig.cfg
.github/: pull_request_template.md
.github/ci_scripts/: cppcheck_publisher.sh  run_cppcheck.sh  run_make.bat  run_make.sh
.github/workflows/: commit_lint.sh  r-type-build.yml  r-type-commits.yml  r-type-cppcheck.yml  r-type-mdbook.yml  r-type-mirror.yml
assets/levels/: level1.txt  level2.txt  level3.txt
ci_scripts/: commit_lint.sh
client/: CMakeLists.txt
client/include/: Config.hpp  ErrorClass.hpp  LevelConfig.hpp  RenderClass.hpp  Systems.hpp  client.hpp  protocol.hpp
client/src/: Config.cpp  ErrorClass.cpp  LevelConfig.cpp  RenderClass.cpp  client.cpp  networking.cpp  player.cpp
client/src/proto/: connection.cpp  enemy.cpp  mechs.cpp  player.cpp  terrain.cpp
client/src/systems/: BulletSystem.cpp  PositionSystem.cpp  RenderSystem.cpp
docs/: Dockerfile  book.toml
docs/src/: SUMMARY.md  benchmarks.md  building.md  intro.md  levelGenerator.md  protocol.md  protocol.txt  userguide.md
docs/src/client/: client.md  configclass.md  errorclass.md  events.md  factory.md  game.md  gameassets.md  gamesystems.md  level.md  levelconfig.md  renderclass.md  utils.md
docs/src/components/: components.md
docs/src/ecs/: components.md  ecs.md  entity.md  system.md
docs/src/ecs/components/: boss_component.md  bullet_component.md  components.md  enemy_component.md  health_component.md  player_component.md  position_component.md  render_component.md  text_component.md  velocity_component.md
docs/src/ecs/system/: system.md
docs/src/engine/: engine.md  engineassetmanager.md  engineecsmanager.md  enginelevelmanager.md  enginenetworking.md  gameEngine.md
docs/src/libs/: libSystem.md
game/: CMakeLists.txt
game/include/: Config.hpp  ErrorClass.hpp  Event.hpp  Events.hpp  Factory.hpp  Game.hpp  GameAssets.hpp  GameBuilder.hpp  GameEvents.hpp  GameNetwork.hpp  GameProtocol.hpp  GameSystems.hpp  GamerNetwork.hpp  GamerServer.hpp  LevelConfig.hpp  Levels.hpp  Networking.hpp  RenderClass.hpp  Utils.hpp  UtilsClass.hpp  client.hpp  game.hpp  protocol.hpp  server.hpp
game/include/components/: AIComponent.hpp  ClickableComponent.hpp
game/src/: Config.cpp  ErrorClass.cpp  LevelConfig.cpp  RenderClass.cpp  UtilsClass.cpp  boss.cpp  builder.cpp  client.cpp  enemy.cpp  game.cpp  main.cpp  networking.cpp  player.cpp  protocolImplement.cpp  server.cpp
game/src/Events/: EventManager.cpp  KeyPressed.cpp  KeyReleased.cpp  MouseClicked.cpp
game/src/components/: ClickableComponent.cpp
game/src/factory/: BuildBackground.cpp  BuildBonus.cpp  BuildBoss.cpp  BuildBullet.cpp  BuildButton.cpp  BuildEnemy.cpp  BuildExplosion.cpp  BuildInput.cpp  BuildMusic.cpp  BuildPlayer.cpp  BuildText.cpp  Factory.cpp
game/src/levels/: buildConnectToServer.cpp  buildLobby.cpp  buildMainMenu.cpp  buildSettingsMenu.cpp
game/src/networking/: clientManagement.cpp  networking.cpp  threadConnection.cpp  threadRead.cpp  threadWrite.cpp
game/src/proto/: connection.cpp  enemy.cpp  mechs.cpp  player.cpp  terrain.cpp
game/src/systems/: BackgroundSystem.cpp  BulletSystem.cpp  HealthSystem.cpp  HitboxSystem.cpp  HitboxSystemp.cpp  PositionSystem.cpp  RenderSystem.cpp
game/src/utils/: getKeyFromString.cpp
levelGenerator/: main.py
libs/ecs/: CMakeLists.txt
libs/ecs/include/: Component.hpp  Components.hpp  Entity.hpp  Systems.hpp  ecs.hpp
libs/ecs/src/: Entity.cpp  ecs.cpp
libs/ecs/src/components/: BossComponent.cpp  BulletComponent.cpp  CircleComponent.cpp  EnemyComponent.cpp  NameComponent.cpp  PositionComponent.cpp  RectangleComponent.cpp  RenderComponent.cpp  SpriteComponent.cpp  TextComponent.cpp  VelocityComponent.cpp
libs/ecs/src/components/systems/: VelocitySystem.cpp
libs/ecs/src/systems/: BulletSystem.cpp  PositionSystem.cpp  RenderSystem.cpp
libs/system/: CMakeLists.txt
libs/system/include/: system.hpp  system_dp.hpp  system_network.hpp  system_tcp.hpp  system_udp.hpp
libs/system/src/: system.cpp  system_network.cpp  system_tcp.cpp  system_udp.cpp
libs/tinyV8/: CMakeLists.txt
libs/tinyV8/dependencies/ecs/: CMakeLists.txt
libs/tinyV8/dependencies/ecs/include/: Components.hpp  Entity.hpp  Systems.hpp
libs/tinyV8/dependencies/ecs/src/: Entity.cpp
libs/tinyV8/dependencies/ecs/src/components/: BackgroundComponent.cpp  BonusComponent.cpp  BossComponent.cpp  BulletComponent.cpp  EnemyComponent.cpp  HealthComponent.cpp  HitboxComponent.cpp  NameComponent.cpp  PlayerComponent.cpp  PositionComponent.cpp  RenderComponent.cpp  ReplicationComponent.cpp
libs/tinyV8/dependencies/system/: CMakeLists.txt
libs/tinyV8/dependencies/system/include/: system.hpp  system_udp.hpp
libs/tinyV8/dependencies/system/src/: system_udp.cpp
libs/tinyV8/include/: AssetManager.hpp  ECSManager.hpp  Engine.hpp  EngineAssetManager.hpp  EngineECSManager.hpp  EngineEvents.hpp  EngineLevelManager.hpp  EngineNetworking.hpp  Events.hpp  Networking.hpp  ecsManager.hpp
libs/tinyV8/src/: AssetManager.cpp  assetManager.cpp  ecsManager.cpp  engine.cpp  events.cpp  networking.cpp  networkingThreads.cpp
server/: CMakeLists.txt
server/include/: protocol.hpp  server.hpp
server/src/: game.cpp  handle_player.cpp  serialize.cpp  server.cpp  server_utils.cpp  thread_read.cpp  thread_write.cpp
server/src/gameFunctions/: players.cpp
tests/: CMakeLists.txt
tests/src/components/: boss_component_test.cpp  bullet_component_test.cpp  enemy_component_test.cpp  health_component_test.cpp  player_component_test.cpp  position_component_test.cpp  render_component_test.cpp  text_component_test.cpp  velocity_component_test.cpp
tests/src/entity/: entity_test.cpp
tools/: asan-linux.sh  build-linux.sh  build-macos.sh  build-windows.ps1  clean.ps1  clean.sh  debug-linux.sh  distribute-linux.sh  link-macos.sh
